[package]
name = "tpm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
leveldb = "0.8.6"
tempfile = "3"
db-key = "0.0.5"
regex = "1.5"
fs_extra = "1.2"
futures = "0.3"
clap = "2.33"
chrono = "0.4"
const_format = "0.2.22"
humantime = "2.1.0"
colored = "2.0.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
